--- a/themes/heather-hugo/layouts/partials/foot.html
+++ b/themes/heather-hugo/layouts/partials/foot.html
@@ -11,5 +11,9 @@
 </footer>
 {{ end }}
 
+{{ if not (eq (print .Site.BaseURL) "http://localhost:1313/") }}
+{{ template "_internal/google_analytics.html" .  }}
+{{ end }}
+
 </body>
 </html>
